spacing fix

--- a/public/css/application-style.css
+++ b/public/css/application-style.css
@@ -167,7 +167,7 @@ textarea {
     font-weight: bold;
     padding-bottom: 2em;
 }
-#app3 .row, .half-row {
+#app3 .row, #app3 .half-row {
     margin-bottom: 1em;
 }
 #additional {
